--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "jsanbae/laudus-api-php",
     "type": "library",
+    "require": {
+        "php": ">=7.4"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
         "vlucas/phpdotenv": "^5.5"
