--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "Jsanbae\\LaudusAPIPHP\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "test/"
+        }
+    },
     "authors": [
         {
             "name": "Javier Sanchez",
